# showroom-podcast

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Pipfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tasks.py
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json  docker-compose.yml
.github/workflows/: analyze.yml  codeql.yml  deploy.yml  test.yml
showroompodcast/: __init__.py  archiving_task_manager.py  cli.py  config.py  exceptions.py  raise_if.py  showroom_archiver.py  showroom_datetime.py  showroom_podcast.py  showroom_poller.py  showroom_stream_spec_factory.py
showroompodcast/api/: __init__.py  polling.py  streaming_url.py
showroompodcast/slack/: __init__.py  slack_client.py
tests/: conftest.py  test_cli.py  test_showroom_archiver.py  test_showroom_poller.py
tests/api/: __init__.py  test_polling.py  test_streaming_url.py
tests/slack/: test_slack_client.py
tests/testresources/: config_valid_slack_configuration.yml  response_streaming_url.json  successful_response_chat_post_message_broken_process_pool.json  successful_response_chat_post_message_type_error.json
